# DASNet-workshop

./: .gitignore  README.md  lab2d_inference_helpers.py  predict.py  pyproject.toml  requirements.txt  train.py  train_EC.py  utils.py
das-dataloader/python/: Pipfile  example.py
dasnet/data/: das.py
dasnet/model/: backbone_utils.py  dasnet.py  fastrcnn.py  maskrcnn.py  roiheads.py
scripts/: analyze_bbox_shapes.py  check_prepared_data.py  czech_das_to_dasnet.py  czech_das_to_dasnet_objection.py  debug_walk_boxes.py  diagnose_loss_mask.py  download_backbone.py  extract_files_from_coco_json.py  inspect_h5.py  predict_best_czech.py  prepare_standard_data.py  visualize_conversion.py
tests/: conftest.py  test_czech_das_to_dasnet.py
